@@ -1,8 +1,0 @@
-name 'thias-openvpn'
-version '0.2.5'
-source 'git://github.com/thias/puppet-openvpn'
-author 'Matthias Saou'
-license 'Apache 2.0'
-summary 'OpenVPN module'
-description "Install, enable and configure OpenVPN servers and static clients."
-project_page 'https://github.com/thias/puppet-openvpn'
