@@ -1,0 +1,38 @@
+{
+  "name": "thias-openvpn",
+  "version": "0.2.5",
+  "author": "Matthias Saou",
+  "license": "Apache-2.0",
+  "summary": "OpenVPN module",
+  "source": "https://github.com/thias/puppet-openvpn",
+  "project_page": "https://forge.puppetlabs.com/thias/openvpn",
+  "issues_url": "https://github.com/thias/puppet-openvpn/issues",
+  "tags": ["openvpn", "networking", "vpn", "security"],
+  "operatingsystem_support": [
+    {
+    "operatingsystem":"RedHat",
+    "operatingsystemrelease":[ "5", "6", "7" ]
+    },
+    {
+    "operatingsystem":"CentOS",
+    "operatingsystemrelease":[ "5", "6", "7" ]
+    },
+    {
+    "operatingsystem":"Debian",
+    "operatingsystemrelease":[ "6", "7" ]
+    },
+    {
+    "operatingsystem":"Ubuntu",
+    "operatingsystemrelease":[ "12", "14" ]
+    }
+  ],
+  "requirements": [
+    {
+    "name": "puppet",
+    "version_requirement": ">=2.7.20 <4.0.0"
+    }
+  ],
+  "description": "Install, enable and configure OpenVPN servers and static clients",
+  "dependencies": [
+  ]
+}
